--- a/templates/createAccount.hbs
+++ b/templates/createAccount.hbs
@@ -398,10 +398,10 @@
                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                   <tr>
                     <td>
-                      <img src="https://firebasestorage.googleapis.com/v0/b/testgame-d8af2.appspot.com/o/blackcat.png?alt=media&token=802b3146-0347-46e5-a91f-bb64a1a0859c" width="100" height="100" img>
+                      <img src="https://firebasestorage.googleapis.com/v0/b/testgame-d8af2.appspot.com/o/icon.png?alt=media&token=f5c02dfa-e3ca-43eb-8330-fb56439f9c8b" width="100" height="100"/>
                       <p>Chào bạn,</p>
                       <p>Bạn đang hoàn thành xác nhận đăng kí tài khoản!</p>
-                      <p>Mã xác nhận là <span class="copy" style="color: #3498db; cursor: pointer">{{code}}</span><span class="alert" style="color: rgb(255, 0, 251);">(Nhấn để sao chép!)</span>.</p>
+                      <p>Mã xác nhận là <span class="copy" style="color: #3498db; cursor: pointer">{{code}}</span>.</p>
                       <p>Vui lòng hoàn thành xác nhận trong vòng 30 phút.</p>
                       <p>BlackCat</p>
                       <p style="color: grey !important;">Đây là thư từ hệ thống, vui lòng không trả lời thư.</p>
@@ -437,25 +437,6 @@
       <td>&nbsp;</td>
     </tr>
   </table>
-  <script>
-    const copy = document.querySelector('.copy')
-
-    copy.addEventListener('click', (e) => {
-        document.execCommand("copy");
-        e.target.outerHTML = `
-        <span class="copy" style="color: #3498db;">{{code}}<span style="color: green">(✔ Đã copy!)</span></span>
-        `
-        document.querySelector(".alert").outerHTML = ''
-    })
-
-    copy.addEventListener("copy", function(e) {
-      e.preventDefault();
-      if (e.clipboardData) {
-        e.clipboardData.setData("text/plain", e.target.innerText);
-        console.log(e.clipboardData.getData("text"))
-      }
-    });
-  </script>
 </body>
 
 </html>
